; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_load_folder_perm.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_load_folder_perm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @load_folder_perm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @load_folder_perm(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to i32**
  store i32** %10, i32*** %5, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i64 @sqlite3_column_text(i32* %11, i32 0)
  %13 = inttoptr i64 %12 to i8*
  store i8* %13, i8** %6, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i64 @sqlite3_column_text(i32* %14, i32 1)
  %16 = inttoptr i64 %15 to i8*
  store i8* %16, i8** %7, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = call i32* @folder_perm_new(i8* %17, i8* %18)
  store i32* %19, i32** %8, align 8
  %20 = load i32**, i32*** %5, align 8
  %21 = load i32*, i32** %20, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = call i32* @g_list_prepend(i32* %21, i32* %22)
  %24 = load i32**, i32*** %5, align 8
  store i32* %23, i32** %24, align 8
  %25 = load i32, i32* @TRUE, align 4
  ret i32 %25
}

declare dso_local i64 @sqlite3_column_text(i32*, i32) #1

declare dso_local i32* @folder_perm_new(i8*, i8*) #1

declare dso_local i32* @g_list_prepend(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
